--- a/OOP2/gradle/wrapper/gradle-wrapper.properties
+++ b/OOP2/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Tue Nov 24 14:21:13 WIB 2020
+#Mon Nov 23 16:23:54 ICT 2020
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
