--- a/OOP2/local.properties
+++ b/OOP2/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Dec 01 11:19:11 WIB 2020
-sdk.dir=/home/dilea/Android/Sdk
+#Tue Dec 01 13:38:36 ICT 2020
+sdk.dir=C\:\\Users\\ASUS\\AppData\\Local\\Android\\Sdk
