--- a/OOP2/app/build.gradle
+++ b/OOP2/app/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.1.0'
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.cardview:cardview:1.0.0'
     def room_version = "2.2.5"
 
     implementation "androidx.room:room-runtime:$room_version"
