--- a/OOP2/local.properties
+++ b/OOP2/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Dec 09 14:29:06 WIB 2020
-sdk.dir=/home/dilea/Android/Sdk
+#Thu Dec 17 13:56:15 ICT 2020
+sdk.dir=C\:\\Users\\ASUS\\AppData\\Local\\Android\\Sdk
