--- a/OOP2/local.properties
+++ b/OOP2/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Dec 28 12:49:33 ICT 2020
-sdk.dir=C\:\\Users\\ASUS\\AppData\\Local\\Android\\Sdk
+#Mon Jan 04 20:42:24 WIB 2021
+sdk.dir=/home/dilea/Android/Sdk
